[gd_scene load_steps=7 format=3 uid="uid://cesj64wqtgr6c"]

[ext_resource type="Script" path="res://ui/button2d.gd" id="1_bg7to"]
[ext_resource type="Texture2D" uid="uid://c6squx5ymrct6" path="res://assets/icons/Grass-Buttons-pressed-return2.png" id="2_lmct0"]
[ext_resource type="Texture2D" uid="uid://dch4bvus558qh" path="res://assets/icons/Grass-Buttons-return2.png" id="3_ex4a0"]

[sub_resource type="Gradient" id="Gradient_uajfd"]
offsets = PackedFloat32Array(0.574514, 0.809935)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0u8d4"]
gradient = SubResource("Gradient_uajfd")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2afd"]
size = Vector2(96, 96)

[node name="Button2D" type="Node2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_bg7to")

[node name="Pressed" type="Sprite2D" parent="."]
texture = ExtResource("2_lmct0")

[node name="Normal" type="Sprite2D" parent="."]
texture = ExtResource("3_ex4a0")

[node name="Hover" type="PointLight2D" parent="."]
visible = false
color = Color(1, 1, 1, 0.258824)
texture = SubResource("GradientTexture2D_0u8d4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_t2afd")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
